fix overflow ui

--- a/src/components/sections/QuotationSection.css
+++ b/src/components/sections/QuotationSection.css
@@ -19,12 +19,6 @@
   background-repeat: no-repeat;
 }
 
-/* image collée à droite */
-.small-square-right::before {
-  right: -450px;               /* décale l'image hors du bloc */
-  background-image: url(/background/bg-sqaure-fill-small.png);
-}
-
 .quotation__content,
 .quotation__author {
     position: relative;
@@ -61,5 +55,13 @@
 @media screen and (min-width: 650px) {
     .quotation {
         margin-bottom: 4.625rem;
+    }
+}
+
+@media screen and (min-width: 898px) {
+    /* image collée à droite */
+    .small-square-right::before {
+        right: -450px;               /* décale l'image hors du bloc */
+        background-image: url(/background/bg-sqaure-fill-small.png);
     }
 }
